更新第一版

--- a/src/main/java/org/gsonformat/intellij/ui/JsonDialog.form
+++ b/src/main/java/org/gsonformat/intellij/ui/JsonDialog.form
@@ -99,12 +99,9 @@
               <size top="2" left="2" bottom="2" right="2"/>
             </border>
             <children>
-              <component id="134f1" class="javax.swing.JTextPane" binding="editTP">
+              <component id="ecf28" class="javax.swing.JTextArea" binding="editTP">
                 <constraints/>
-                <properties>
-                  <enabled value="true"/>
-                  <margin top="1" left="1" bottom="1" right="1"/>
-                </properties>
+                <properties/>
               </component>
             </children>
           </scrollpane>
