--- a/src/main/java/org/gsonformat/intellij/ui/SettingDialog.form
+++ b/src/main/java/org/gsonformat/intellij/ui/SettingDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="765" height="849"/>
+      <xy x="48" y="54" width="904" height="890"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -62,23 +62,6 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="b775c" class="javax.swing.JRadioButton" binding="fieldPublicRadioButton" default-binding="true">
-                <constraints>
-                  <grid row="17" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="filed (public) "/>
-                </properties>
-              </component>
-              <component id="afbc9" class="javax.swing.JRadioButton" binding="fieldPrivateRadioButton">
-                <constraints>
-                  <grid row="16" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <selected value="false"/>
-                  <text value="filed (private)"/>
-                </properties>
-              </component>
               <component id="adef0" class="javax.swing.JCheckBox" binding="arrayFromDataCB">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="8" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -157,7 +140,7 @@
               </component>
               <component id="b1cb3" class="javax.swing.JTextField" binding="suffixEdit">
                 <constraints>
-                  <grid row="12" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="9" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -172,7 +155,7 @@
               </hspacer>
               <component id="1210c" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Entity"/>
@@ -180,7 +163,7 @@
               </component>
               <component id="e7c1f" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Field"/>
@@ -192,17 +175,6 @@
                 </constraints>
                 <properties>
                   <text value="Convert method"/>
-                </properties>
-              </component>
-              <component id="e1145" class="javax.swing.JCheckBox" binding="reuseEntityCB">
-                <constraints>
-                  <grid row="11" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="30"/>
-                    <preferred-size width="-1" height="30"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="reuse bean"/>
                 </properties>
               </component>
               <grid id="6d2ba" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -302,20 +274,9 @@
                   <text value="Convert Library"/>
                 </properties>
               </component>
-              <component id="9eff9" class="javax.swing.JCheckBox" binding="virgoModelCB">
-                <constraints>
-                  <grid row="6" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="30"/>
-                    <preferred-size width="-1" height="30"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="virgo mode"/>
-                </properties>
-              </component>
               <component id="b1cc0" class="javax.swing.JTextField" binding="filedPrefixTF">
                 <constraints>
-                  <grid row="15" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="12" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -323,21 +284,13 @@
               </component>
               <component id="7870" class="javax.swing.JCheckBox" binding="filedPrefixCB">
                 <constraints>
-                  <grid row="15" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="30"/>
                     <preferred-size width="-1" height="30"/>
                   </grid>
                 </constraints>
                 <properties>
                   <text value="name prefix :"/>
-                </properties>
-              </component>
-              <component id="fa434" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="12" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="      name suffix : "/>
                 </properties>
               </component>
               <component id="1a6f7" class="javax.swing.JSeparator">
@@ -348,13 +301,13 @@
               </component>
               <component id="8171a" class="javax.swing.JSeparator">
                 <constraints>
-                  <grid row="9" column="0" row-span="1" col-span="9" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="7" column="0" row-span="1" col-span="9" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
               <component id="65191" class="javax.swing.JSeparator">
                 <constraints>
-                  <grid row="13" column="0" row-span="1" col-span="9" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="10" column="0" row-span="1" col-span="9" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
               </component>
@@ -364,31 +317,9 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="6cc2" class="javax.swing.JCheckBox" binding="generateCommentsCT">
-                <constraints>
-                  <grid row="7" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="30"/>
-                    <preferred-size width="-1" height="30"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="generate comments"/>
-                </properties>
-              </component>
-              <component id="61cbe" class="javax.swing.JCheckBox" binding="splitGenerateMode">
-                <constraints>
-                  <grid row="8" column="0" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="30"/>
-                    <preferred-size width="-1" height="30"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <text value="split generate"/>
-                </properties>
-              </component>
               <component id="70489" class="javax.swing.JCheckBox" binding="useSerializedNameCheckBox">
                 <constraints>
-                  <grid row="18" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="30"/>
                     <preferred-size width="-1" height="30"/>
                   </grid>
@@ -399,13 +330,140 @@
               </component>
               <component id="91a84" class="javax.swing.JCheckBox" binding="useWrapperClassCB">
                 <constraints>
-                  <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="30"/>
                     <preferred-size width="-1" height="30"/>
                   </grid>
                 </constraints>
                 <properties>
                   <text value="use wrapper class "/>
+                </properties>
+              </component>
+              <component id="c2ba2" class="javax.swing.JCheckBox" binding="useJava8LocalDateTimeCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="useJava8LocalDateTime"/>
+                </properties>
+              </component>
+              <component id="bd74e" class="javax.swing.JCheckBox" binding="dateFormatCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="dateFormat:"/>
+                </properties>
+              </component>
+              <component id="d09c" class="javax.swing.JTextField" binding="dateFormatTextField">
+                <constraints>
+                  <grid row="16" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <editable value="true"/>
+                </properties>
+              </component>
+              <component id="27e2c" class="javax.swing.JCheckBox" binding="dateTimeFormatCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="15" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="dateTimeFormat"/>
+                </properties>
+              </component>
+              <component id="95edd" class="javax.swing.JTextField" binding="dateTimeFormatField">
+                <constraints>
+                  <grid row="15" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="6d249" class="javax.swing.JTextField" binding="timeFormatTextField">
+                <constraints>
+                  <grid row="17" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="c0ff2" class="javax.swing.JCheckBox" binding="timeFormatCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="timeFormat"/>
+                </properties>
+              </component>
+              <component id="9eff9" class="javax.swing.JCheckBox" binding="virgoModelCB">
+                <constraints>
+                  <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="30"/>
+                    <preferred-size width="-1" height="30"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="virgo mode"/>
+                </properties>
+              </component>
+              <component id="61cbe" class="javax.swing.JCheckBox" binding="splitGenerateMode">
+                <constraints>
+                  <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="30"/>
+                    <preferred-size width="-1" height="30"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="split generate"/>
+                </properties>
+              </component>
+              <component id="6cc2" class="javax.swing.JCheckBox" binding="generateCommentsCT">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="30"/>
+                    <preferred-size width="-1" height="30"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="generate comments"/>
+                </properties>
+              </component>
+              <component id="afbc9" class="javax.swing.JRadioButton" binding="fieldPrivateRadioButton">
+                <constraints>
+                  <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <selected value="false"/>
+                  <text value="filed (private)"/>
+                </properties>
+              </component>
+              <component id="b775c" class="javax.swing.JRadioButton" binding="fieldPublicRadioButton" default-binding="true">
+                <constraints>
+                  <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="filed (public) "/>
+                </properties>
+              </component>
+              <component id="fa434" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="      name suffix : "/>
+                </properties>
+              </component>
+              <component id="e1145" class="javax.swing.JCheckBox" binding="reuseEntityCB">
+                <constraints>
+                  <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="30"/>
+                    <preferred-size width="-1" height="30"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <text value="reuse bean"/>
                 </properties>
               </component>
             </children>
